prefetched-manifests/dashboard/modular-architecture/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: odh-dashboard-allow-ports
spec:
  podSelector:
    matchLabels:
      deployment: odh-dashboard
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8443
          protocol: TCP
        - port: 8043
          protocol: TCP
        - port: 8143
          protocol: TCP
        - port: 8243
          protocol: TCP
      # Empty 'from' means allow from all sources to these ports.
